KSENROLL-12774 - Turn off Section Level messaging and fix page level - Fixed spacing issue.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@69797 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -1126,6 +1126,10 @@ div#Uif-ApplicationHeader-Wrapper{
   vertical-align: bottom;
 }
 
+#ClusterDeleteConfirmationPage .uif-pageHeader {
+  min-height: initial;
+}
+
 #ActivityOffering-InquiryView-HeaderOne  .uif-headerText{
   background-color: white;
   box-shadow: 0px 6px 6px -5px rgba(0, 0, 0, 0.5);
